--- a/IotSensores/.env.example
+++ b/IotSensores/.env.example
@@ -1,12 +1,37 @@
+# ===========================================
+# IoT Sensores - Environment Variables Template
+# ===========================================
+# Copy this file to .env and fill in the values
+# Or use .env.development, .env.staging, .env.production
+
 # App
 NODE_ENV=development
 PORT=3000
 
-# Database
-DATABASE_URL=postgresql://iot:iot123@localhost:5432/iot_sensores
+# Database (PostgreSQL)
+DATABASE_URL=postgresql://user:password@host:port/database
+DATABASE_PUBLIC_URL=postgresql://user:password@public_host:port/database
+
+# PostgreSQL Configuration
+PGDATA=/var/lib/postgresql/data/pgdata
+PGDATABASE=database_name
+PGHOST=localhost
+PGPASSWORD=your_password
+PGPORT=5432
+PGUSER=postgres
+POSTGRES_DB=database_name
+POSTGRES_PASSWORD=your_password
+POSTGRES_USER=postgres
 
 # RabbitMQ
-RABBITMQ_URL=amqp://iot:iot123@localhost:5672
+RABBITMQ_URL=amqp://user:password@host:port
 
 # Logging
 LOG_LEVEL=debug
+
+# Railway specific (production only)
+# RAILWAY_PRIVATE_DOMAIN=
+# RAILWAY_TCP_PROXY_DOMAIN=
+# RAILWAY_TCP_PROXY_PORT=
+# RAILWAY_DEPLOYMENT_DRAINING_SECONDS=60
+# SSL_CERT_DAYS=820
