--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/Jeffersonemilio/Ambio#readme",
   "dependencies": {
     "amqplib": "^0.10.9",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.17.1",
