--- a/api/.env.example
+++ b/api/.env.example
@@ -6,3 +6,8 @@ RABBITMQ_URL=amqp://user:password@host:port/vhost
 
 # Server
 PORT=3000
+
+# Email - useSend
+USESEND_API_KEY=us_your_api_key
+USESEND_URL=https://your-usesend-server.com
+USESEND_FROM_EMAIL=noreply@yourdomain.com
