--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.17.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "usesend-js": "^1.5.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
