--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 node_modules/
 .env
 dist/
+
+# Uploads (manter apenas .gitkeep)
+api/uploads/*
+!api/uploads/.gitkeep
+!api/uploads/avatars/
+api/uploads/avatars/*
+!api/uploads/avatars/.gitkeep
